# analise-de-dados-boas-praticas

./: .gitignore  README.md  fetch_test.py  main.ipynb  main.py  pyproject.toml  scrape-test.py
bd_utils/: bd_builder.py  bd_builder_improved.ipynb
data_cleaner/: identifica_remover.py  quick_identifica.py  xml_parser.py
data_fetcher/: pack_downloader.py
database/: metadata_part_0001.parquet  metadata_part_0003.parquet  textos_part_0001.parquet  textos_part_0003.parquet  textos_part_0004.parquet  textos_part_0006.parquet  textos_part_0007.parquet  textos_part_0009.parquet  textos_part_0010.parquet  textos_part_0011.parquet  textos_part_0012.parquet  textos_part_0013.parquet  textos_part_0015.parquet  textos_part_0018.parquet  textos_part_0019.parquet  textos_part_0021.parquet  textos_part_0023.parquet
database_2/: metadata_part_0001.parquet  metadata_part_0002.parquet  metadata_part_0003.parquet  metadata_part_0004.parquet  metadata_part_0005.parquet  textos_part_0001.parquet  textos_part_0002.parquet  textos_part_0003.parquet  textos_part_0004.parquet  textos_part_0005.parquet  textos_part_0006.parquet  textos_part_0007.parquet  textos_part_0008.parquet  textos_part_0009.parquet  textos_part_0010.parquet  textos_part_0011.parquet  textos_part_0012.parquet  textos_part_0013.parquet  textos_part_0014.parquet  textos_part_0015.parquet  textos_part_0016.parquet  textos_part_0017.parquet  textos_part_0018.parquet  textos_part_0019.parquet  textos_part_0020.parquet  textos_part_0021.parquet  textos_part_0022.parquet  textos_part_0023.parquet
databricks/: 01. config.ipynb  02. ingestion.ipynb  03. manipulate.ipynb  04. database.ipynb  05.data_clustering.ipynb
documentos/: dou_zips.txt
explorers/: clean_texto.ipynb  counter_metadata.ipynb  counter_texto.ipynb  pure_regex.ipynb  test_bert.ipynb
org_xml_parquet/: part_0000.parquet  part_0001.parquet  part_0002.parquet  part_0003.parquet  part_0004.parquet  part_0005.parquet  part_0006.parquet  part_0007.parquet  part_0008.parquet  part_0009.parquet  part_0010.parquet  part_0011.parquet  part_0012.parquet  (+350 more)
(+25 files in other folders)
