[project]
name = "analise-de-dados-boas-praticas"
version = "0.1.0"
description = "Analise exploratoria de publicacoes do Diario Oficial da Uniao"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
ingestion = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
